2006-11-03  Heikki Orsila <heikki.orsila@iki.fi>
	- Ctrl-c will cause EXIT_FAILURE to be returned (process error code).
	- Statistics will be printed on Ctrl-c (not MD5 sum)

2006-01-23  Heikki Orsila <heikki.orsila@iki.fi>
	- Added support for non-blocking I/O if someone needs it. No practical
	  circumstance has ever come up. If it had, the pmr would have exited
	  with error indicating the reason.

2006-01-01  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.11
	- Added size units to display total bytes. It is more human-readable
	  to display 14.31 MiB rather than 15000000 bytes. Thanks to Al Piszcz
	  for suggesting this feature.
	- Note: you may access the pmr CVS repository by:
	  cvs -d :pserver:uadecvs@zakalwe.virtuaalipalvelin.net:/home/uade-cvsroot login
	  <password is uadecvs>
	  cvs -d :pserver:uadecvs@zakalwe.virtuaalipalvelin.net:/home/uade-cvsroot co pmr
	- It is now possible to specify throughtput limit in SI, IEC 60027
	  and bit units. Valid IEC 60027 units (base 2) are:
	    B, KiB, MiB, GiB, TiB, PiB, EiB, ZiB and YiB
	  Valid SI units (base 10) are:
	    B, kB, MB, GB, TB, PB, EB, ZB and YB
	  Valid bit units are:
	    b, kbit, Mbit, GBit, Tbit, Pbit, Ebit, Zbit and Ybit.
	  An example:
	    tar cvf - *FILES* |pmr -l 256kbits |nc host port

2005-08-09  Heikki Orsila <heikki.orsila@iki.fi>
	- Changed sprintf() to snprintf() in timetest() to shut up an OpenBSD
	  compiler. The program wasn't faulty, but an OpenLSD compiler is
	  paranoid.

2005-07-21  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.10
	- Started keeping ChangeLog file, and moved history information from
	  pmr.c to this file.
	- Removed useless documentation from pmr.c.
	- Edited man-page to be more readable.
	- Removed everything about -c switch.
	- Added -m / --md5 switch that computes an md5 checksum of the stream.
	  This is useful for verifying data integrity through TCP networks.
	  Thanks to Ave for the idea.

2005-03-08  Heikki Orsila <heikki.orsila@iki.fi>